# TZServeHUB

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  SECURITY.md  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_add_labels.sql  003_add_auth_token.sql  004_add_rollup_series_identity.sql  005_add_auth_fields.sql  006_add_server_status.sql  007_add_probe_results.sql  008_add_known_hosts.sql  009_add_notification_channels.sql  010_secrets_migration.sql  011_add_alert_event_delivery_status.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/adapters/: go_agent.rs  mod.rs  node_exporter.rs  traits.rs
src-tauri/src/alerts/: mod.rs  notifier.rs  rules.rs
src-tauri/src/commands/: alerts.rs  channels.rs  known_hosts.rs  metrics.rs  mod.rs  probes.rs  server.rs  settings.rs
src-tauri/src/deployer/: known_hosts.rs  mod.rs  ssh_client.rs
src-tauri/src/metrics/: derived.rs  mod.rs  rollup.rs  schema.rs
src-tauri/src/models/: alert.rs  metric.rs  mod.rs  server.rs
src-tauri/src/probes/: dns.rs  mod.rs  ping.rs  tcp.rs
src-tauri/src/scheduler/: mod.rs  poller.rs  probe_scheduler.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs  (+1 more)
src-tauri/tests/: deploy_with_host_key.rs  host_key_migration.rs  notification_channels_migration.rs  notifier_desktop_regression.rs  secrets_keychain_linux.rs  secrets_keychain_macos.rs  secrets_keychain_windows.rs  secrets_migration.rs  server_remove_clears_secrets.rs  tauri_conf.rs
(+149 files in other folders)
