[package]
name = "serverhub"
version = "0.1.0"
description = "ServerHUB - Desktop Server Monitoring Control Plane"
authors = ["ha1den"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "serverhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.0", features = ["test"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client (for pulling exporter metrics)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System info (for local diagnostics)
sysinfo = "0.33"

# Ping probe
surge-ping = "0.8"

# Async trait
async-trait = "0.1"

# UUID for IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Random
rand = "0.8"

# SHA-256 host key fingerprints
sha2 = "0.10"

# SSH host key verification
russh = "0.46"
russh-keys = "0.46"
